[package]
name = "raestro"
version = "0.2.0"
authors = ["nathan-n-poon <nathannpoon@gmail.com>", "raunakab <rabhagat31@gmail.com>", "KelvinKCLee <leekachunkelvin@gmail.com>", "bzhou64 <billzhou64@gmail.com>", "panchalmaharshi8 <panchalmaharshi8@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A Rust-flavoured API Interface for the Pololu Micro-Maestro (6-Channel) Servo Controller Board. Developed for the Raspberry Pi"
repository = "https://github.com/raunakab/raestro"
keywords = ["pololu", "maestro", "6-channel", "servo-controller", "raspberry-pi"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rppal
# rpi utils for UART, PWM, I2C, etc.
rppal = "0.11.3"
