[package]
name = "raestro"
version = "0.2.0"
authors = ["nathan-n-poon <nathannpoon@gmail.com>", "raunakab <rabhagat31@gmail.com>", "KelvinKCLee <leekachunkelvin@gmail.com>", "bzhou64 <billzhou64@gmail.com>", "panchalmaharshi8 <panchalmaharshi8@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A Rust-flavoured API Interface for the Pololu Micro-Maestro (6-Channel) Servo Controller Board. Developed for the Raspberry Pi"
repository = "https://github.com/raunakab/raestro"
keywords = ["pololu", "maestro", "6-channel", "servo-controller", "raspberry-pi"]
readme = "README.md"

[dependencies]
# rppal
# rpi utils for UART, PWM, I2C, etc.
rppal = "0.11.3"

[[example]]
name = "set_target"    # The name of the target.
test = true            # Is tested by default.
doctest = false        # Documentation examples are tested by default.
bench = true           # Is benchmarked by default.
doc = false            # Is documented by default.
proc-macro = false     # Set to `true` for a proc-macro library.
harness = true         # Use libtest harness.
edition = "2018"       # The edition of the target.
crate-type = ["bin"]   # The crate types to generate.
required-features = [] # Features required to build this target (N/A for lib).

[[example]]
name = "get_position"  # The name of the target.
test = true            # Is tested by default.
doctest = false        # Documentation examples are tested by default.
bench = true           # Is benchmarked by default.
doc = false            # Is documented by default.
proc-macro = false     # Set to `true` for a proc-macro library.
harness = true         # Use libtest harness.
edition = "2018"       # The edition of the target.
crate-type = ["bin"]   # The crate types to generate.
required-features = [] # Features required to build this target (N/A for lib).

[[example]]
name = "set_acceleration"   # The name of the target.
test = true                 # Is tested by default.
doctest = false             # Documentation examples are tested by default.
bench = true                # Is benchmarked by default.
doc = false                 # Is documented by default.
proc-macro = false          # Set to `true` for a proc-macro library.
harness = true              # Use libtest harness.
edition = "2018"            # The edition of the target.
crate-type = ["bin"]        # The crate types to generate.
required-features = []      # Features required to build this target (N/A for lib).

[[example]]
name = "set_speed"    # The name of the target.
test = true            # Is tested by default.
doctest = false        # Documentation examples are tested by default.
bench = true           # Is benchmarked by default.
doc = false            # Is documented by default.
proc-macro = false     # Set to `true` for a proc-macro library.
harness = true         # Use libtest harness.
edition = "2018"       # The edition of the target.
crate-type = ["bin"]   # The crate types to generate.
required-features = [] # Features required to build this target (N/A for lib).
